Rework code for 5.4.x
Move to Java 8